# KeyCrafter

./: .env  .gitignore  BROWSER_SSH_CHECKLIST.md  BROWSER_SSH_SETUP_GUIDE.md  Cargo.toml  Dockerfile  README.md  authorized_keys  browser_ssh_setup.md  build-linux.dockerfile  build.rs  check_keycrafter_update.ps1  cloudflare-access-policy.json  docker-compose.yml  install.sh  keycrafter_save.backup.json  keycrafter_save.json  package.json  security-policy.json  setup-browser-ssh.sh  setup_keys.sh  start.sh  test-install.ps1
.ssh/: config
cloudflared/: 552ba21b-d360-4141-9aa0-f28c89c9b4de.json  Dockerfile  config.yml  credentials.json
haproxy/: haproxy.cfg
nginx/: nginx.conf
pam-config/: cloudflare-access
release-v0.0.1/: RELEASE_NOTES.md  keycrafter-linux-x64
resources/: words_easy.txt  words_hard.txt  words_medium.txt
scripts/: install.js  install.ps1  install.sh
sftp-shell/: about.txt  art.json  custom-shell.sh  welcome.txt
src/: about.md  ascii_objects.rs  coastline.rs  crafting.rs  floating_text.rs  islands.rs  main.rs  pathfinding.rs  resource_types.rs  save_system.rs  updater.rs  upgrades.rs  word_lists.rs
web/: index.html  script.js  style.css
