[package]
name = "keycrafter"
version = "0.1.31"
edition = "2021"

[dependencies]
crossterm = "0.27"
ratatui = "0.24"
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pathfinding = "4.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 